cmake_minimum_required(VERSION 2.6)

PROJECT(netlink-monitor C)
FIND_PATH(LIBEVENT_INCLUDE_DIR NAMES event.h)
FIND_LIBRARY(event NAMES event)
INCLUDE(CheckFunctionExists)
ADD_DEFINITIONS(-Os -Wall --std=gnu99 -g3)

SET(CMAKE_VERBOSE_MAKEFILE ON)
aux_source_directory(. CURRENT_SRC)
message(STATUS "CURRENT_SRC = ${CURRENT_SRC}")

ADD_EXECUTABLE(${PROJECT_NAME} ${CURRENT_SRC} ${event})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} event)

INSTALL(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION sbin)

